1、fix生成token中authorities不正确的bug; 2、网关添加跨域支持 3、platform-bom版本改为Cairo-SR7